--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="utf-8" />
         <title>issue_loader</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
+
     <body>
-        <script type="text/javascript" src="bundle.js"></script>
+        <script src="bundle.js"></script>
     </body>
 </html>
